# vr-benchmark-pipline

./: .gitignore  README.md  add_requirements.txt  audio_load.py  check_key.py  eval_ltx.sh  eval_ovi.sh  eval_results1.csv  eval_wan.sh  extract_modality_test.py  extract_video_test.py  git_push.sh  metrics_total.backup.py  metrics_total.py  modality_total.sh  organize.py  requirements.txt  test_ID.py  test_ID.sh  test_wer.py  test_wer.sh  uniav_eval.sh
Verse-Bench/: README.md  organize.py
av_bench/: evaluate.py  extract.py  extraction_models.py  utils.py
csvs/: collector.py
datas/: meta.lst  outputs
evaluation_results/: results_['aesthetic_quality']_eval_results.json  results_['aesthetic_quality']_full_info.json  results_['aesthetic_quality']_ltx_eval_results.json  results_['aesthetic_quality']_ltx_full_info.json  results_['aesthetic_quality']_ovi_eval_results.json  results_['aesthetic_quality']_ovi_full_info.json  results_['aesthetic_quality']_test_full_info.json  results_['aesthetic_quality']_uniav_eval_results.json  results_['aesthetic_quality']_uniav_full_info.json  (+48 more)
metrics/: .gitignore  README.md  evaluate copy.py  extract_text.py  extract_video.py  feature_check.py  original_data  pyproject.toml
metrics/av_bench/: extract.py  utils.py
metrics/av_bench.backup/: args.py  evaluate.py  extract.py
metrics/av_bench.backup/synchformer/: __init__.py
metrics/av_bench/metrics/: isc.py
metrics/pred_cache/: output_metrics.json
metrics/scripts/: test_video_backends.py
metrics/test_data/text/: simple_text.csv  text.csv
modules/: ID.py  add_indent.py  (+9 more)
(+674 files in other folders)
